<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp" >

            <ImageButton
                android:id="@+id/btnBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#000"
                android:minHeight="100dip"
                android:minWidth="100dip"
                android:src="@drawable/ic_launcher"
                android:text="Button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnBook"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/newBook" 
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"  >

            <ImageButton
                android:id="@+id/btnViewBookings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#000"
                android:minHeight="100dip"
                android:minWidth="100dip"
                android:src="@drawable/ic_launcher_bookings"
                android:text="Button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnViewBookings"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/viewBookings" 
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp">

            <ImageButton
                android:id="@+id/btnReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#000"
                android:minHeight="100dip"
                android:minWidth="100dip"
                android:src="@drawable/ic_launcher"
                android:text="Button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnReview"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/review" 
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" 
            android:layout_marginLeft="10dp">

            <ImageButton
                android:id="@+id/btnSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#000"
                android:minHeight="100dip"
                android:minWidth="100dip"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSettings"
                android:layout_gravity="center_vertical"
                android:text="@string/settings"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>